@@ -1,5 +1,10 @@
 # $Id$
 
+2006-11-04	Konstantin V. Arkhipov
+
+	* core/Logic/Expression.class.php: toValueString(), toFieldString()
+	moved to Dialect, as suggested by Antony; toFormValue moved to Form.
+
 2006-11-04	Anton E. Lebedevich
 
 	* core/Logic/: backward incompatible reorganization: LogicalBlock
